--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -16,7 +16,7 @@ footer .contact__me .contact .show-email {
 
 .contact__me {
     width: 100%;
-    padding: 2rem;
+    padding: 2rem 3rem;
 }
 
 .contact__me-title {
@@ -33,7 +33,7 @@ footer .contact__me .contact .show-email {
 .testimonials {
     width: 100%;
     background-color: var(--theme-secondary-dark-blue);
-    padding: 2rem;
+    padding: 2rem 3rem;
 }
 
 .testimonial__image {
@@ -42,7 +42,6 @@ footer .contact__me .contact .show-email {
 }
 .testimonial__image img:first-child {
     margin-top: -2rem;
-
 }
 
 .testimonial__image img:last-child {
@@ -50,7 +49,6 @@ footer .contact__me .contact .show-email {
     height: 5rem;
     border: 2px solid var(--theme-secondary-dark-white);
     border-radius: 16rem;
-
 }
 
 .testimonials p {
@@ -58,13 +56,6 @@ footer .contact__me .contact .show-email {
     margin-bottom: 1rem;
     font-size: 1.2rem;
     font-weight: 500;
-}
-
-.testimonials span {
-    color: var(--theme-secondary-light-white);
-    margin-top: 2rem;
-    margin-bottom: 1rem;
-    font-size: 1.2rem;
 }
 
 /* Tablet Portrait */
@@ -89,10 +80,39 @@ footer .contact__me .contact .show-email {
 
 /* Desktop */
 @media only screen and (min-width: 1440px) {
+    .contact__me-title {
+        font-size: 4rem;
+    }
 
+    .contact__me-subtitle {
+        font-size: 1.6rem;
+    }
+
+    .testimonials p {
+        font-size: 1.6rem;
+    }
+
+    footer .contact__me .contact .show-email {
+        margin-left: -9rem;
+    }
 }
 
 /* Max Desktop */
 @media only screen and (min-width: 1920px) {
+    .contact__me-title {
+        font-size: 80px;
+    }
+
+    .contact__me-subtitle {
+        font-size: 32px;
+    }
+
+    .testimonials p {
+        font-size: 32px;
+    }
+
+    footer .contact__me .contact .show-email {
+        margin-left: -192px;
+    }
     
 }
