--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -26,7 +26,7 @@
   margin-bottom: 1rem;
 }
 
-.project__card-content h5 { 
+.project__card-content h5 {
   margin-bottom: 1rem;
   font-size: 2rem;
   font-weight: 600;
@@ -50,9 +50,7 @@
 }
 
 /* Tablet Portrait */
-@media only screen and (min-width: 768px) {
-    
-}
+@media only screen and (min-width: 768px) {}
 
 
 /* Tablet Landscape */
@@ -74,12 +72,12 @@
     overflow: hidden;
   }
 
-  .project__card.featured > a > img  {
+  .project__card.featured>a>img {
     height: auto;
     object-fit: cover;
   }
 
-  .project__card > a > img  {
+  .project__card>a>img {
     height: 20rem;
     object-fit: cover;
   }
@@ -87,16 +85,91 @@
   .project__card-container {
     height: 20rem;
   }
-
 }
 
 
 /* Desktop */
 @media only screen and (min-width: 1440px) {
+  .project__portfolio {
+    align-items: center;
+    justify-content: center;
+    flex-flow: row wrap;
+    gap: 4rem;
+  }
 
+  .project__card.featured {
+    width: 90rem;
+  }
+
+  .project__card {
+    width: 43rem;
+    border-radius: 1rem;
+    overflow: hidden;
+  }
+
+  .project__card.featured>a>img,
+  .project__card>a>img {
+    width: 100%;
+    object-fit: cover;
+  }
+
+  .project__card-container {
+    height: 23rem;
+  }
+
+  .project__card-content h5 {
+    margin-bottom: 1rem;
+    font-size: 3rem;
+    font-weight: 600;
+  }
+  
+  .project__card-content p,
+  .project__card-content a {
+    font-size: 1.5rem;
+    font-weight: 500;
+  }
 }
 
 /* Max Desktop */
 @media only screen and (min-width: 1920px) {
-    
+  
+  
+  .project__portfolio {
+    align-items: center;
+    justify-content: center;
+    flex-flow: row wrap;
+    gap: 64px;
+  }
+
+  .project__card.featured {
+    width: 1440px;
+  }
+
+  .project__card {
+    width: 688px;
+    border-radius: 16px;
+    overflow: hidden;
+  }
+
+  .project__card.featured>a>img,
+  .project__card>a>img {
+    width: 100%;
+    object-fit: cover;
+  }
+
+  .project__card-container {
+    height: 368px;
+  }
+
+  .project__card-content h5 {
+    margin-bottom: 16px;
+    font-size: 48px;
+    font-weight: 600;
+  }
+  
+  .project__card-content p,
+  .project__card-content a {
+    font-size: 24px;
+    font-weight: 500;
+  }
 }
