--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -49,6 +49,12 @@
   flex-wrap: wrap;
 }
 
+.project__card-img:focus-visible img{
+  box-sizing: border-box;
+  border: 4px solid var(--theme-secondary-dark-blue);
+  border-radius: 0;
+}
+
 /* Tablet Portrait */
 @media only screen and (min-width: 768px) {}
 
