--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -31,8 +31,14 @@
     cursor: text;
     position: absolute;
     animation: 1s appear forwards;
-    border: 1px solid var(--theme-secondary-black);
+    border: 1px solid var(--theme-dark-white);
     border-radius: 4px;
+    color: var(--theme-black);
+}
+
+.contact.dark-mode .contact__info .show-email {
+    border: 1px solid var(--theme-secondary-black);
+    color: var(--theme-secondary-light-white);
 }
 
 .show-email:hover {
@@ -45,9 +51,13 @@
 }
 
 .show-hint {
-    color: var(--theme-hint-black);
+    color: var(--theme-dark-white);
     display: flex;
     align-self: center;
+}
+
+.contact.dark-mode .show-hint {
+    color: var(--theme-hint-black);
 }
 
 .hide-hint {
