--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -7,6 +7,9 @@
   align-items: center;
   justify-content: center;
   flex-flow: column;
+  opacity: 1;
+  transform: translateY(-2rem);
+  transition: all 0.5s ease-in 0.5s;
 }
 
 .about-me__title {
